@@ -2,9 +2,8 @@
 <definition>
   <datasource type="PYEVAL" name="$(name)_crystal">
     <result name="result">
-import PyTango
-dp = PyTango.DeviceProxy("$(dcmdevice)")
-ds.result = dp.crystal
+from nxstools.pyeval import dcm
+ds.result = dcm.crystal("$(dcmdevice)")
     </result>
   </datasource>
 </definition>
