@@ -172,15 +172,10 @@ class NXSCreateStdCompFS2Test(
                      '<definition>\n'
                      '  <datasource name="absorber1_foil" type="PYEVAL">\n'
                      '    <result name="result">\n'
-                     'import json\nfoillist = json.loads(\'["Ag", '
-                     '"Ag", "Ag", "Ag", '
-                     '"", "Al", "Al", '
-                     '"Al", "Al"]\')\n'
-                     'position = int(float(ds.mot01) + 0.5)\n'
-                     'foil = []\nfor pos, mat in enumerate(foillist):\n'
-                     '     foil.append(mat if pos &amp; position '
-                     'else "")\n'
-                     'ds.result = foil'
+                     'from nxstools.pyeval import absorber\n'
+                     'ds.result = absorber.foil('
+                     'ds.mot01, \'["Ag", "Ag", "Ag", "Ag", "", "Al", "Al", '
+                     '"Al", "Al"]\')'
                      '\n    </result>\n'
                      ' $datasources.mot01</datasource>\n'
                      '</definition>',
@@ -189,15 +184,10 @@ class NXSCreateStdCompFS2Test(
                      '  <datasource name="absorber1_thickness"'
                      ' type="PYEVAL">\n'
                      '    <result name="result">\n'
-                     'import json\n'
-                     'thicknesslist = json.loads(\'['
-                     '0.5, 0.05, 0.025, 0.0125, 0, 0.1, 0.3, 0.5, 1.0]\')\n'
-                     'position = int(float(ds.mot01) + 0.5)\n'
-                     'thickness = []\n'
-                     'for pos, thick in enumerate(thicknesslist):\n'
-                     '     thickness.append(thick if pos &amp; position '
-                     'else 0.)\n'
-                     'ds.result = thickness\n'
+                     'from nxstools.pyeval import absorber\n'
+                     'ds.result = absorber.thickness('
+                     'ds.mot01, '
+                     '\'[0.5, 0.05, 0.025, 0.0125, 0, 0.1, 0.3, 0.5, 1.0]\')\n'
                      '    </result>\n'
                      ' $datasources.mot01</datasource>\n'
                      '</definition>'],
@@ -293,13 +283,9 @@ class NXSCreateStdCompFS2Test(
                      '<definition>\n'
                      '  <datasource type="PYEVAL" name="absorber1_foil">\n'
                      '    <result name="result">\n'
-                     'import json\n'
-                     'foillist = json.loads(\'["Ag","","Al"]\')\n'
-                     'position = int(float(ds.mot01) + 0.5)\n'
-                     'foil = []\n'
-                     'for pos, mat in enumerate(foillist):\n'
-                     '     foil.append(mat if pos &amp; position else "")\n'
-                     'ds.result = foil\n'
+                     'from nxstools.pyeval import absorber\n'
+                     'ds.result = absorber.foil('
+                     'ds.mot01, \'["Ag","","Al"]\')\n'
                      '    </result>\n'
                      ' $datasources.mot01</datasource>\n'
                      '</definition>\n',
@@ -308,14 +294,9 @@ class NXSCreateStdCompFS2Test(
                      '  <datasource type="PYEVAL"'
                      ' name="absorber1_thickness">\n'
                      '    <result name="result">\n'
-                     'import json\n'
-                     'thicknesslist = json.loads(\'[0.5,0,1.0]\')\n'
-                     'position = int(float(ds.mot01) + 0.5)\n'
-                     'thickness = []\n'
-                     'for pos, thick in enumerate(thicknesslist):\n'
-                     '     thickness.append('
-                     'thick if pos &amp; position else 0.)\n'
-                     'ds.result = thickness\n'
+                     'from nxstools.pyeval import absorber\n'
+                     'ds.result = absorber.thickness('
+                     'ds.mot01, \'[0.5,0,1.0]\')\n'
                      '    </result>\n'
                      ' $datasources.mot01</datasource>\n'
                      '</definition>\n'],
