@@ -4,6 +4,7 @@
 	* move absorber implementation to pyeval
 	* move qbpm implementation to pyeval
 	* move mssar nad msnsar implementation to pyeval
+	* move dcm implementation to pyeval
 	* move signalname implementation to pyeval
 	* tagged as v3.7.0
 
